docs:调整主机系统指标文档

--- a/pkg/bkmonitorbeat/docs/主机操作系统指标.md
+++ b/pkg/bkmonitorbeat/docs/主机操作系统指标.md
@@ -500,8 +500,8 @@ Linux /proc/loadavg 文件内容如下
   - Metric：mem.used
   - 含义：当前主机物理内存被用于应用程序的大小
   - 采集方法-Linux：
-    - 解析 /proc/meminfo 文件获取内存信息并且解析出 MemTotal、MemAvailable
-    - 应用程序内存使用量 = MemTotal * (1-MemAvailable/MemTotal)
+    - 解析 /proc/meminfo 文件获取内存信息并且解析出 MemTotal、MemFree、Buffers、Cached
+    - 应用程序内存使用量 = MemTotal - MemFree - Buffers - Cached
   - 采集方法-Windows：
     - 调用 Win32 API `GlobalMemoryStatusEx` 获取 Total、Available、Free、UsedPercent
     - 应用程序内存使用量 = Total * UsedPercent
@@ -512,8 +512,8 @@ Linux /proc/loadavg 文件内容如下
   - Metric：mem.pct_used
   - 含义：当前主机物理内存被用于应用程序的占比
   - 采集方法-Linux：
-    - 解析 /proc/meminfo 文件获取内存信息并且解析出 MemTotal、MemAvailable
-    - 应用程序内存使用占比 = (1-MemAvailable/MemTotal) * 100%
+    - 解析 /proc/meminfo 文件获取内存信息并且解析出 MemTotal、MemFree、Buffers、Cached
+    - 应用程序内存使用占比 = ((MemTotal-MemFree-Buffers-Cached)/MemTotal) * 100%
   - 采集方法-Windows：
     - 调用 Win32 API `GlobalMemoryStatusEx` 获取 Total、Available、Free、UsedPercent
     - 应用程序内存使用占比 = UsedPercent
